{
  "version": 4,
  "terraform_version": "0.12.26",
  "serial": 156,
  "lineage": "43bac5c0-b91d-ed71-6dc4-22bd1fbf0b35",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "myterrainstance11",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-010aff33ed5991201",
            "arn": "arn:aws:ec2:ap-south-1:493341977401:instance/i-04cb4b446260a9a92",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": false,
                "device_name": "/dev/sds",
                "encrypted": false,
                "iops": 100,
                "tags": {
                  "Name": "MyEBS"
                },
                "throughput": 0,
                "volume_id": "vol-07c01f952690d78ab",
                "volume_size": 5,
                "volume_type": "gp2"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-04cb4b446260a9a92",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "Multikeypair",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-00b376951f20729df",
            "private_dns": "ip-172-168-1-188.ap-south-1.compute.internal",
            "private_ip": "172.168.1.188",
            "public_ip": "13.233.190.87",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0ce3104175b216bf5",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08ef995650e0356ab",
            "tags": {
              "Name": "myterrainstance1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0d1c223353d50d749"
            ]
          },
          "dependencies": [
            "aws_security_group.myterrasg1",
            "aws_subnet.myterrasubnet11",
            "aws_vpc.myterravpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "myterrainternetgateway1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:493341977401:internet-gateway/igw-00d97006dc786f482",
            "id": "igw-00d97006dc786f482",
            "owner_id": "493341977401",
            "tags": {
              "Name": "myterrainternetgateway"
            },
            "vpc_id": "vpc-0b65ed13b3325ef9e"
          },
          "dependencies": [
            "aws_vpc.myterravpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "myterraroute11",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:493341977401:route-table/rtb-0d6b8c44739fb0a2d",
            "id": "rtb-0d6b8c44739fb0a2d",
            "owner_id": "493341977401",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-00d97006dc786f482",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "myterraroute1"
            },
            "vpc_id": "vpc-0b65ed13b3325ef9e"
          },
          "dependencies": [
            "aws_internet_gateway.myterrainternetgateway1",
            "aws_vpc.myterravpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "routeassociate1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-069000231a37e93c4",
            "route_table_id": "rtb-0d6b8c44739fb0a2d",
            "subnet_id": "subnet-08ef995650e0356ab"
          },
          "dependencies": [
            "aws_internet_gateway.myterrainternetgateway1",
            "aws_route_table.myterraroute11",
            "aws_subnet.myterrasubnet11",
            "aws_vpc.myterravpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "myterrasg1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:493341977401:security-group/sg-0d1c223353d50d749",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "172.168.0.0/16"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d1c223353d50d749",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "myterrasg",
            "name_prefix": "",
            "owner_id": "493341977401",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-0b65ed13b3325ef9e"
          },
          "dependencies": [
            "aws_vpc.myterravpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "myterrasubnet11",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:493341977401:subnet/subnet-08ef995650e0356ab",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "172.168.1.0/24",
            "id": "subnet-08ef995650e0356ab",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "493341977401",
            "tags": {
              "Name": "myterrasubnet1"
            },
            "tags_all": {
              "Name": "myterrasubnet1"
            },
            "vpc_id": "vpc-0b65ed13b3325ef9e"
          },
          "dependencies": [
            "aws_vpc.myterravpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "myterrasubnet12",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:493341977401:subnet/subnet-00737a1bec0c42583",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "172.168.2.0/24",
            "id": "subnet-00737a1bec0c42583",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "493341977401",
            "tags": {
              "Name": "myterrasubnet2"
            },
            "tags_all": {
              "Name": "myterrasubnet2"
            },
            "vpc_id": "vpc-0b65ed13b3325ef9e"
          },
          "dependencies": [
            "aws_vpc.myterravpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "myterravpc1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:493341977401:vpc/vpc-0b65ed13b3325ef9e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.168.0.0/16",
            "default_network_acl_id": "acl-0444337a36ca32929",
            "default_route_table_id": "rtb-0e07fd27630ee3955",
            "default_security_group_id": "sg-03d42dac351eb0896",
            "dhcp_options_id": "dopt-d7218abc",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0b65ed13b3325ef9e",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0e07fd27630ee3955",
            "owner_id": "493341977401",
            "tags": {
              "Name": "myterravpc"
            },
            "tags_all": {
              "Name": "myterravpc"
            }
          }
        }
      ]
    }
  ]
}